Fixing layout problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,14 +9,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
-html {
-    width: 100vw;
-    height: 100vh;
-}
-
 body {
     display: flex;
-    width: 100vw;
-    height: 100vh;
     justify-content: space-between;
 }
